[package]
name = "thousand-trees"
version = "0.1.0"
authors = ["Jan Reitz <jan-reitz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
rand = "0.8"
chrono = "0.4"

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "basic_leaves"
path = "src/basic_leaves.rs"

[[example]]
name = "algae"
path = "src/algae.rs"

[[example]]
name = "fractal_tree"
path = "src/fractal_tree.rs"

[[example]]
name = "fractal_plant"
path = "src/fractal_plant.rs"

[[example]]
name = "stochastic_plant"
path = "src/stochastic_plant.rs"

[[example]]
name = "new"
path = "src/new.rs"
